Commtting All working models

--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -314,10 +314,10 @@
 
 
 
-                <!-- BUTTON TO SHOW IS SUBJECTIVE IS NOT INCLUDED -->
+                <!-- BUTTON TO SHOW If SUBJECTIVE IS NOT INCLUDED -->
                 <ng-template #elseBlock>
                     <div class="contianer centerbtn mt20 mb20">
-                        <button mat-raised-button color="primary" (click)="submitQuiz()">Submit Quiz</button>
+                        <button mat-raised-button color="primary" (click)="submitAllQuiz()">Submit Quiz</button>
                     </div>
                 </ng-template>
             </div>
